# grafica-practica1

include/: camera.h  drawable.h  gizmo.h  load_shader.h  mvp_simple_color_program.h  ortho_camera.h  program.h  scene.h
src/: CMakeLists.txt  drawable.cpp  gizmo.cpp  load_shader.cpp  main.cpp  mvp_simple_color_program.cpp  ortho_camera.cpp  program.cpp  scene.cpp
